<?xml version="1.0"?>

<resources>

    <string name="app_name">EasyHotel</string>
    <string name="font_Helvetica">fonts/Helvetica.ttf</string>
    <string name="Helvetica_light">fonts/Helvetica-Light.ttf</string>
    <string name="Helvetica_bold">fonts/Helvetica-Bold.ttf</string>
    <string name="accept">Submit</string>
    <string name="new_member">New member ? </string>
    <string name="sign_up">Sign Up</string>
    <string name="or_connect_with">OR</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="login">Login</string>
    <string name="back_to_login">Back to Login</string>
    <string name="cancel">Cancel</string>
    <string name="already_a_member">Already a member ? </string>
    <string name="page_home">Home</string>
    <string name="page_home_detail">Detail Hotel</string>
    <string name="my_profile">Edit Profile</string>
    <string name="faq">FAQ</string>
    <string name="favourites">Favourites Hotel</string>
    <string name="history">History</string>
    <string name="change_password">Change password</string>
    <string name="faq_1">FAQ 1</string>
    <string name="submit">Submit</string>
    <string name="logout">Logout</string>
    <string name="page_maps">Search Hotel</string>
    <string name="page_other">Other</string>
    <string name="page_news">News</string>
    <string name="page_setting">Setting</string>
    <string name="google_maps_key">AIzaSyAJcr3XOh_QLsrPLcTAUUd8eRkMd9nuuL8</string>
    <string name="facebook_app_id">117766158898188</string>
    <string name="search_place">Cafe, ATM, Bank, Hospital....</string>
    <string name="first_name">User Name</string>
    <string name="full_name">Full Name</string>
    <string name="female">Female</string>
    <string name="phone">Home Number</string>
    <string name="mobi_phone">Mobile Number</string>
    <string name="dob">Date of Birth</string>
    <string name="nric">NRIC</string>
    <string name="postal">Postal Code</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="error">Error</string>
    <string name="complete">Complete</string>
    <string name="warning">Warning</string>
    <string name="email_admin">admin@easyhotel.com</string>
    <string name="signup_ok">Thank you for signing up. Please log in to your email to verify your account.</string>
    <string name="reset_your_password">Don’t worry! Just fill in your email and\nwe’ll help you reset your password</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="booking_now">Booking Now</string>
    <string name="enter_comment">Enter comment</string>
    <string name="enter">Enter</string>
    <string name="out_room">Out Room</string>
    <string name="booking">Booking now</string>
    <string name="no_comment_for_the_hotel">No comment for the hotel</string>
    <string name="no_rating_for_the_hotel">No rating for the hotel</string>
    <string name="name_hotel">Name Hotel</string>
    <string name="price">Price</string>
    <string name="single">Single</string>
    <string name="_double">Double</string>
    <string name="more_image">More Image</string>
    <string name="add_photo">Add\nphoto</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="choice_photo">Choice photo</string>
    <string name="service">Service</string>
</resources>