<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/red_two"
              android:clickable="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_icons_login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center|bottom"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:orientation="vertical">

        <TextView
            fontPath="@string/Helvetica_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/reset_your_password"
            android:textColor="@color/whiteThree"
            android:textSize="@dimen/_13sdp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/shape_boder_text_view"
            android:padding="@dimen/_8sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_email"/>

            <EditText
                android:id="@+id/fragForgotPassword_evEmail"
                fontPath="@string/Helvetica_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:background="@null"
                android:hint="@string/confirm_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/whiteThree"
                android:textColorHint="@color/whiteThree"
                android:textSize="14.5sp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/fragForgotPassword_tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/selector_text_view"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit"
            android:textColor="@color/whiteThree"
            android:textSize="17sp"/>

        <LinearLayout
            android:id="@+id/fragForgotPassword_tvBackLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:layout_weight="1"
            android:gravity="bottom|center_horizontal"
            android:orientation="horizontal">

            <TextView
                fontPath="@string/Helvetica_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_4sdp"
                android:text="@string/back_to_login"
                android:textColor="@color/whiteThree"
                android:textSize="15sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
