<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteThree"
    android:clickable="true"
    android:orientation="vertical">

    <include layout="@layout/base_action_bar_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp">

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:fletPaddingBottom="@dimen/_4sdp"
            app:fletTextAppearance="@color/greyishBrownThree">

            <EditText
                android:id="@+id/fragChangePassword_etOldPass"
                fontPath="@string/Helvetica_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@null"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:textColor="@color/denimBlue"
                android:textColorHint="@color/denimBlue"
                android:textSize="@dimen/_13sdp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <include layout="@layout/base_line" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:fletPaddingBottom="@dimen/_4sdp"
            app:fletTextAppearance="@color/greyishBrownThree">

            <EditText
                android:id="@+id/fragChangePassword_etNewPass"
                fontPath="@string/Helvetica_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:background="@null"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColor="@color/denimBlue"
                android:textColorHint="@color/denimBlue"
                android:textSize="@dimen/_13sdp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <include layout="@layout/base_line" />

        <com.wrapp.floatlabelededittext.FloatLabeledEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:fletPaddingBottom="@dimen/_4sdp"
            app:fletTextAppearance="@color/greyishBrownThree">

            <EditText
                android:id="@+id/fragChangePassword_etConfirmPass"
                fontPath="@string/Helvetica_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColor="@color/denimBlue"
                android:textColorHint="@color/denimBlue"
                android:textSize="@dimen/_13sdp" />
        </com.wrapp.floatlabelededittext.FloatLabeledEditText>

        <include layout="@layout/base_line" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragChangePassword_tvSubmit"
            android:layout_width="@dimen/_170sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="@dimen/_17sdp"
            android:background="@drawable/selector_text_view_red"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/submit"
            android:textColor="@color/whiteThree"
            android:textSize="14sp" />
    </FrameLayout>
</LinearLayout>
