<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_two"
    android:clickable="true"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/ic_icons_login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|bottom"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_50sdp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_boder_text_view"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_email" />

                <EditText
                    android:id="@+id/fragLogin_etEmail"
                    fontPath="@string/Helvetica_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_1sdp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/whiteThree"
                    android:textColorHint="@color/whiteThree"
                    android:textSize="14.5sp" />
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/shape_boder_text_view"
                android:padding="@dimen/_8sdp">


                <EditText
                    android:id="@+id/fragLogin_etPassword"
                    fontPath="@string/Helvetica_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/whiteThree"
                    android:textColorHint="@color/whiteThree"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:src="@drawable/ic_password" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:background="@drawable/shape_boder_text_view"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="@dimen/_1sdp"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/fragSingUp_etConfirmPassword"
                    fontPath="@string/Helvetica_light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/whiteThree"
                    android:textColorHint="@color/whiteThree"
                    android:textSize="14sp" />

            </FrameLayout>


            <TextView
                android:id="@+id/fragLogin_tvLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@drawable/shape_boder_text_view"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/sign_up"
                android:textColor="@color/whiteThree"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:background="@color/whiteThree" />

                <TextView
                    fontPath="@string/Helvetica_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/Helvetica_bold"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/or_connect_with"
                    android:textColor="@color/whiteThree"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:background="@color/whiteThree" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fragLogin_ivFacebook"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="right"
                    android:src="@drawable/ic_facebook" />

                <ImageView
                    android:id="@+id/fragLogin_ivGoogle"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_google" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    fontPath="@string/Helvetica_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_a_member"
                    android:textColor="@color/whiteThree"
                    android:textSize="14.5sp" />

                <TextView
                    android:id="@+id/fragLogin_tvSignUp"
                    fontPath="@string/Helvetica_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/login"
                    android:textColor="@color/whiteThree"
                    android:textSize="14.5sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
